# addsong

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  RELEASE.md  SETUP.md  addsong  install.ps1  install.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  integration.yml  release.yml
Formula/: addsong.rb
assets/badges/: _logo_paths.json  _make_badges.py
completions/: _addsong  addsong.bash
docs/: RELEASE.md
packaging/aur/: .SRCINFO  PKGBUILD
src/addsong/: __init__.py  __main__.py  cli.py  completion.py  config.py  constants.py  ffmpeg.py  ledger.py  meta.py  pipeline.py  platform.py  review.py  subscriptions.py  ui.py  ytdlp.py
test/: addsong.bats
tests/: __init__.py  conftest.py  test_cli.py  test_cli_bats_port.py  test_completion.py  test_config.py  test_ledger.py  test_meta.py  test_pipeline_meta.py  test_platform.py  test_smoke.py  test_subscriptions.py  test_ui.py  test_ytdlp.py
